home menu done - no responsive a button size

--- a/index.html
+++ b/index.html
@@ -263,15 +263,15 @@
                     <div class="mu-restaurant-menu-area">
                         <div class="mu-restaurant-menu-content">
                             <ul class="nav nav-tabs mu-restaurant-menu">
-                                <li class="active"><a href="#breakfast" data-toggle="tab">Pizza</a></li>
-                                <li><a href="#meals" data-toggle="tab">Piadine</a></li>
-                                <li><a href="#snacks" data-toggle="tab">Paste</a></li>
-                                <li><a href="#desserts" data-toggle="tab">Salate</a></li>
-                                <li><a href="#drinks" data-toggle="tab">Platouri</a></li>
+                                <li class="active"><a href="#pizza" data-toggle="tab">Pizza</a></li>
+                                <li><a href="#piadine" data-toggle="tab">Piadine</a></li>
+                                <li><a href="#paste" data-toggle="tab">Paste</a></li>
+                                <li><a href="#salate" data-toggle="tab">Salate</a></li>
+                                <li><a href="#platouri" data-toggle="tab">Platouri</a></li>
                             </ul>
 
                             <div class="tab-content">
-                                <div class="tab-pane fade in active" id="breakfast">
+                                <div class="tab-pane fade in active" id="pizza">
                                     <div class="mu-tab-content-area">
                                         <div class="row">
                                             <div class="col-md-12">
@@ -280,9 +280,8 @@
                                                         <div class="row gp-menu-row">
                                                             <div class="col col-xs-9">
                                                                 <h2 class="gp-menu-name">Garden</h2>
-                                                                <p class="gp-menu-info">grancucina, mozzarella,
-                                                                    piept de pui, ardei gras, ciuperci, dovlecei,
-                                                                    usturoi</p>
+                                                                <p class="gp-menu-info">grancucina, mozzarella, piept de
+                                                                    pui, ardei gras, ciuperci, dovlecei, usturoi</p>
                                                             </div>
                                                             <div class="col col-xs-3">
                                                                 <h2 class="gp-menu-price"><span class="gp-price">22
@@ -294,8 +293,8 @@
                                                         <div class="row gp-menu-row gp-menu-row-bg">
                                                             <div class="col col-xs-9">
                                                                 <h2 class="gp-menu-name">Pizza Casei</h2>
-                                                                <p class="gp-menu-info">sos de roșii, mozzarella, bacon,
-                                                                    ciuperci, măsline, parmezan</p>
+                                                                <p class="gp-menu-info">sos de ro&#351;ii, mozzarella,
+                                                                    bacon, ciuperci, m&#259;sline, parmezan</p>
                                                             </div>
                                                             <div class="col col-xs-3">
                                                                 <h2 class="gp-menu-price"><span class="gp-price">20
@@ -315,7 +314,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="tab-pane fade " id="meals">
+                                <div class="tab-pane fade " id="piadine">
                                     <div class="mu-tab-content-area">
                                         <div class="row">
                                             <div class="col-md-12">
@@ -323,13 +322,12 @@
                                                     <li>
                                                         <div class="row gp-menu-row">
                                                             <div class="col col-xs-9">
-                                                                <h2 class="gp-menu-name">Garden</h2>
-                                                                <p class="gp-menu-info">grancucina, mozzarella,
-                                                                    piept de pui, ardei gras, ciuperci, dovlecei,
-                                                                    usturoi</p>
+                                                                <h2 class="gp-menu-name">Salami</h2>
+                                                                <p class="gp-menu-info">salam, mozzarella, salat&#259;,
+                                                                    maionez&#259;</p>
                                                             </div>
                                                             <div class="col col-xs-3">
-                                                                <h2 class="gp-menu-price"><span class="gp-price">22
+                                                                <h2 class="gp-menu-price"><span class="gp-price">11
                                                                         lei</span></h2>
                                                             </div>
                                                         </div>
@@ -337,12 +335,13 @@
                                                     <li>
                                                         <div class="row gp-menu-row gp-menu-row-bg">
                                                             <div class="col col-xs-9">
-                                                                <h2 class="gp-menu-name">Pizza Casei</h2>
-                                                                <p class="gp-menu-info">sos de roșii, mozzarella, bacon,
-                                                                    ciuperci, măsline, parmezan</p>
+                                                                <h2 class="gp-menu-name">Pollo</h2>
+                                                                <p class="gp-menu-info">salat&#259;, piept de pui,
+                                                                    castrave&#355;i proaspe&#355;i, ro&#351;ii,
+                                                                    m&#259;sline</p>
                                                             </div>
                                                             <div class="col col-xs-3">
-                                                                <h2 class="gp-menu-price"><span class="gp-price">20
+                                                                <h2 class="gp-menu-price"><span class="gp-price">17
                                                                         lei</span></h2>
                                                             </div>
                                                         </div>
@@ -359,7 +358,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="tab-pane fade " id="snacks">
+                                <div class="tab-pane fade " id="paste">
                                     <div class="mu-tab-content-area">
                                         <div class="row">
                                             <div class="col-md-12">
@@ -367,10 +366,9 @@
                                                     <li>
                                                         <div class="row gp-menu-row">
                                                             <div class="col col-xs-9">
-                                                                <h2 class="gp-menu-name">Garden</h2>
-                                                                <p class="gp-menu-info">grancucina, mozzarella,
-                                                                    piept de pui, ardei gras, ciuperci, dovlecei,
-                                                                    usturoi</p>
+                                                                <h2 class="gp-menu-name">Spaghete Carbonara</h2>
+                                                                <p class="gp-menu-info">grancucina, bacon, ou, parmezan,
+                                                                    piper</p>
                                                             </div>
                                                             <div class="col col-xs-3">
                                                                 <h2 class="gp-menu-price"><span class="gp-price">22
@@ -381,9 +379,9 @@
                                                     <li>
                                                         <div class="row gp-menu-row gp-menu-row-bg">
                                                             <div class="col col-xs-9">
-                                                                <h2 class="gp-menu-name">Pizza Casei</h2>
-                                                                <p class="gp-menu-info">sos de roșii, mozzarella, bacon,
-                                                                    ciuperci, măsline, parmezan</p>
+                                                                <h2 class="gp-menu-name">Penne Amatriciana</h2>
+                                                                <p class="gp-menu-info">sos ro&#351;u, bacon, parmezan,
+                                                                    ceap&#259;, usturoi</p>
                                                             </div>
                                                             <div class="col col-xs-3">
                                                                 <h2 class="gp-menu-price"><span class="gp-price">20
@@ -403,7 +401,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="tab-pane fade " id="desserts">
+                                <div class="tab-pane fade " id="salate">
                                     <div class="mu-tab-content-area">
                                         <div class="row">
                                             <div class="col-md-12">
@@ -412,12 +410,12 @@
                                                         <div class="row gp-menu-row">
                                                             <div class="col col-xs-9">
                                                                 <h2 class="gp-menu-name">Garden</h2>
-                                                                <p class="gp-menu-info">grancucina, mozzarella,
-                                                                    piept de pui, ardei gras, ciuperci, dovlecei,
-                                                                    usturoi</p>
+                                                                <p class="gp-menu-info">rucola, prosciutto crudo,
+                                                                    parmezan, ro&#351;ii cherry, crutoane, dressing,
+                                                                    o&#355;et balsamic</p>
                                                             </div>
                                                             <div class="col col-xs-3">
-                                                                <h2 class="gp-menu-price"><span class="gp-price">22
+                                                                <h2 class="gp-menu-price"><span class="gp-price">24
                                                                         lei</span></h2>
                                                             </div>
                                                         </div>
@@ -425,12 +423,13 @@
                                                     <li>
                                                         <div class="row gp-menu-row gp-menu-row-bg">
                                                             <div class="col col-xs-9">
-                                                                <h2 class="gp-menu-name">Pizza Casei</h2>
-                                                                <p class="gp-menu-info">sos de roșii, mozzarella, bacon,
-                                                                    ciuperci, măsline, parmezan</p>
+                                                                <h2 class="gp-menu-name">Greca</h2>
+                                                                <p class="gp-menu-info">castrave&#355;i proaspe&#355;i,
+                                                                    ro&#351;ii proaspete, br&#226;nz&#259;,
+                                                                    m&#259;sline, ceap&#259;, ou, dressing</p>
                                                             </div>
                                                             <div class="col col-xs-3">
-                                                                <h2 class="gp-menu-price"><span class="gp-price">20
+                                                                <h2 class="gp-menu-price"><span class="gp-price">22
                                                                         lei</span></h2>
                                                             </div>
                                                         </div>
@@ -447,7 +446,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="tab-pane fade " id="drinks">
+                                <div class="tab-pane fade " id="platouri">
                                     <div class="mu-tab-content-area">
                                         <div class="row">
                                             <div class="col-md-12">
