change some style

--- a/index.html
+++ b/index.html
@@ -135,8 +135,6 @@
                         <span class="gp-slider-small-title">Pizza</span>
                         <h2 class="gp-slider-title">Un meniu diversificat &#351;i delicios.</h2>
                         <p>Alege pizza, paste, piadine, salate sau unul din platouri.</p>
-
-                        <!-- <a href="#gp-reservation" class="gp-readmore-btn gp-reservation-btn">BOOK A TABLE</a> -->
                     </div>
                     <!-- / Top slider content -->
                 </div>
@@ -145,6 +143,69 @@
         </div>
     </section>
     <!-- End slider  -->
+
+    <section id="cook-delecious">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="cook-delecious">
+                        <div class="container">
+                            <div class="container-fluid">
+                                <div class="col-md-3 col-md-offset-1">
+                                    <div class="first-image">
+                                        <img src="assets/img/cook_01.jpg" alt="">
+                                    </div>
+                                </div>
+
+                                <div class="col-md-4">
+                                    <div class="cook-content">
+                                        <h4 class="we-cook">
+                                            <i class="fa fa-exclamation" style=""></i>
+                                            <i class="fa fa-exclamation" style=""></i>
+                                            <i class="fa fa-exclamation" style=""></i> Noi g&#259;tim <i
+                                                class="fa fa-exclamation" style=""></i>
+                                            <i class="fa fa-exclamation" style=""></i>
+                                            <i class="fa fa-exclamation" style=""></i>
+                                            <!-- Noi g&#259;tim -->
+                                        </h4>
+
+                                        <div class="contact-content">
+
+                                            <a href="tel: +40724770007"><span class="fa fa-phone contact-phone"></span>
+                                                0724 77
+                                                00 07</a>
+                                        </div>
+                                        <div class="contact-content">
+                                            <a href="tel: +40767074848"><span class="fa fa-phone contact-phone"></span>
+                                                0767 07
+                                                48 48</a>
+                                        </div>
+                                        <div class="contact-content">
+                                            <a href="tel: +40745506699"><span class="fa fa-phone contact-phone"></span>
+                                                0745 50
+                                                66 99</a>
+                                        </div>
+                                        <h4 class="we-send">
+                                            <i class="fa fa-taxi"></i>
+                                            Noi livr&#259;m
+                                            <i class="fa fa-taxi"></i>
+                                        </h4>
+
+                                        <h6><a href="#mu-restaurant-menu">Alege ce ai poft&#259;</a></h6>
+                                    </div>
+                                </div>
+
+                                <div class="col-md-3">
+                                    <div class="second-image">
+                                        <img src="assets/img/cook_02.jpg" alt="">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+    </section>
 
     <!-- Start About us -->
     <section id="gp-about-us">
@@ -185,56 +246,6 @@
         </div>
     </section>
     <!-- End About us -->
-
-    <!-- Start Reservation section -->
-    <section id="gp-reservation">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12">
-                    <div class="cook-delecious">
-                        <div class="container">
-                            <div class="container-fluid">
-                                <div class="col-md-3 col-md-offset-1">
-                                    <div class="first-image">
-                                        <img src="assets/img/cook_01.jpg" alt="">
-                                    </div>
-                                </div>
-
-                                <div class="col-md-4">
-                                    <div class="cook-content">
-                                        <h4>
-                                            <i class="fa fa-exclamation" style=""></i>
-                                            <i class="fa fa-exclamation" style=""></i>
-                                            <i class="fa fa-exclamation" style=""></i> Noi g&#259;tim <i
-                                                class="fa fa-exclamation" style=""></i>
-                                            <i class="fa fa-exclamation" style=""></i>
-                                            <i class="fa fa-exclamation" style=""></i>
-                                        </h4>
-                                        <h4>
-                                            <i class="fa fa-taxi"></i>
-                                            Noi livr&#259;m
-                                            <i class="fa fa-taxi"></i>
-                                        </h4>
-                                        <a href="#mu-restaurant-menu">
-                                            <div class="contact-content">
-                                                <h6>Alege ce ai poft&#259;</h6>
-                                            </div>
-                                        </a>
-                                    </div>
-                                </div>
-
-                                <div class="col-md-3">
-                                    <div class="second-image">
-                                        <img src="assets/img/cook_02.jpg" alt="">
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-    </section>
-    <!-- End Reservation section -->
 
     <section id="gp-counter">
         <div class="gp-counter-overlay">
