--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                         <span class="icon-bar"></span>
                     </button>
 
-                    <a class="navbar-brand" href="/"><img src="assets/img/gp.svg" alt="Logo img"></a>
+                    <a class="navbar-brand" href="/index.html"><img src="assets/img/gp.svg" alt="Logo img"></a>
 
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
@@ -171,17 +171,20 @@
 
                                         <div class="contact-content">
 
-                                            <a href="tel: +40724770007"><span class="fa fa-phone contact-phone"></span>
+                                            <a href="tel: +40724770007" class="gp-hover"><span
+                                                    class="fa fa-phone contact-phone"></span>
                                                 0724 77
                                                 00 07</a>
                                         </div>
                                         <div class="contact-content">
-                                            <a href="tel: +40767074848"><span class="fa fa-phone contact-phone"></span>
+                                            <a href="tel: +40767074848" class="gp-hover"><span
+                                                    class="fa fa-phone contact-phone"></span>
                                                 0767 07
                                                 48 48</a>
                                         </div>
                                         <div class="contact-content">
-                                            <a href="tel: +40745506699"><span class="fa fa-phone contact-phone"></span>
+                                            <a href="tel: +40745506699" class="gp-hover"><span
+                                                    class="fa fa-phone contact-phone"></span>
                                                 0745 50
                                                 66 99</a>
                                         </div>
@@ -220,12 +223,13 @@
                         </div> -->
 
                         <div class="row">
-                            <div class="col-md-6">
+                            <div class="col-md-5">
                                 <div class="gp-about-us-left">
-                                    <img src="assets/img/about-us.png" alt="img">
+                                    <img class="bottom" src="assets/img/about-dark.jpg" />
+                                    <img class="top" src="assets/img/about-light.jpg" />
                                 </div>
                             </div>
-                            <div class="col-md-6">
+                            <div class="col-md-7">
                                 <div class="gp-about-us-right">
                                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam minus aliquid,
                                         itaque illum
@@ -233,9 +237,9 @@
                                         libero enim odio quo.
                                     </p>
                                     <ul>
-                                        <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</li>
-                                        <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</li>
-                                        <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia.</li>
+                                        <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A.</li>
+                                        <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. B.</li>
+                                        <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. C.</li>
                                     </ul>
                                 </div>
                             </div>
@@ -255,7 +259,7 @@
                         <div class="gp-counter-area">
 
                             <div class="gp-counter-nav">
-                                „ Sunt mai gustoase decat sunt aratoase. ”
+                                „ Aratoase, dar mult mai gustoase ”
                             </div>
 
                         </div>
@@ -521,56 +525,105 @@
                             <h2>Our Gallery</h2>
                         </div> -->
 
-                        <div class="gp-gallery-content">
-
-                            <div class="gp-gallery-body">
-                                <div class="gp-single-gallery col-md-4">
-                                    <div class="gp-single-gallery-item">
-                                        <figure class="gp-single-gallery-img">
-                                            <a class="gp-imglink" href="assets/img/gallery/1.jpg">
-                                                <img alt="img" src="assets/img/gallery/1.jpg">
-                                                <div class="gp-single-gallery-info">
-                                                    <img class="gp-view-btn" src="assets/img/plus.png"
-                                                        alt="plus icon img">
-                                                </div>
-                                            </a>
-                                        </figure>
-                                    </div>
+                        <!-- Start gallery image -->
+                        <div class="gp-gallery-body">
+                            <!-- start single gallery image -->
+                            <div class="gp-single-gallery col-md-4">
+                                <div class="gp-single-gallery-item">
+                                    <figure class="gp-single-gallery-img">
+                                        <a class="gp-imglink" href="assets/img/gallery/1.jpg">
+                                            <img alt="img" src="assets/img/gallery/1.jpg">
+                                            <div class="gp-single-gallery-info">
+                                                <img class="gp-view-btn" src="assets/img/plus.png" alt="plus icon img">
+                                            </div>
+                                        </a>
+                                    </figure>
                                 </div>
-
-                                <div class="gp-single-gallery col-md-4">
-                                    <div class="gp-single-gallery-item">
-                                        <figure class="gp-single-gallery-img">
-                                            <a class="gp-imglink" href="assets/img/gallery/2.jpg">
-                                                <img alt="img" src="assets/img/gallery/2.jpg">
-                                                <div class="gp-single-gallery-info">
-                                                    <img class="gp-view-btn" src="assets/img/plus.png"
-                                                        alt="plus icon img">
-                                                </div>
-                                            </a>
-                                        </figure>
-                                    </div>
-                                </div>
-
-                                <div class="gp-single-gallery col-md-4">
-                                    <div class="gp-single-gallery-item">
-                                        <figure class="gp-single-gallery-img">
-                                            <a class="gp-imglink" href="assets/img/gallery/3.jpg">
-                                                <img alt="img" src="assets/img/gallery/3.jpg">
-                                                <div class="gp-single-gallery-info">
-                                                    <img class="gp-view-btn" src="assets/img/plus.png"
-                                                        alt="plus icon img">
-                                                </div>
-                                            </a>
-                                        </figure>
-                                    </div>
-                                </div>
-
                             </div>
+                            <!-- End single gallery image -->
+
+                            <!-- start single gallery image -->
+                            <div class="gp-single-gallery col-md-4">
+                                <div class="gp-single-gallery-item">
+                                    <figure class="gp-single-gallery-img">
+                                        <a class="gp-imglink" href="assets/img/gallery/2.jpg">
+                                            <img alt="img" src="assets/img/gallery/2.jpg">
+                                            <div class="gp-single-gallery-info">
+                                                <img class="gp-view-btn" src="assets/img/plus.png" alt="plus icon img">
+                                            </div>
+                                        </a>
+                                    </figure>
+                                </div>
+                            </div>
+                            <!-- End single gallery image -->
+
+                            <!-- start single gallery image -->
+                            <div class="gp-single-gallery col-md-4">
+                                <div class="gp-single-gallery-item">
+                                    <figure class="gp-single-gallery-img">
+                                        <a class="gp-imglink" href="assets/img/gallery/3.jpg">
+                                            <img alt="img" src="assets/img/gallery/3.jpg">
+                                            <div class="gp-single-gallery-info">
+                                                <img class="gp-view-btn" src="assets/img/plus.png" alt="plus icon img">
+                                            </div>
+                                        </a>
+                                    </figure>
+                                </div>
+                            </div>
+                            <!-- End single gallery image -->
+
+                            <!-- start single gallery image -->
+                            <div class="gp-single-gallery col-md-4">
+                                <div class="gp-single-gallery-item">
+                                    <figure class="gp-single-gallery-img">
+                                        <a class="gp-imglink" href="assets/img/gallery/4.jpg">
+                                            <img alt="img" src="assets/img/gallery/4.jpg">
+                                            <div class="gp-single-gallery-info">
+                                                <img class="gp-view-btn" src="assets/img/plus.png" alt="plus icon img">
+                                            </div>
+                                        </a>
+                                    </figure>
+                                </div>
+                            </div>
+                            <!-- End single gallery image -->
+
+                            <!-- start single gallery image -->
+                            <div class="gp-single-gallery col-md-4">
+                                <div class="gp-single-gallery-item">
+                                    <figure class="gp-single-gallery-img">
+                                        <a class="gp-imglink" href="assets/img/gallery/5.jpg">
+                                            <img alt="img" src="assets/img/gallery/5.jpg">
+                                            <div class="gp-single-gallery-info">
+                                                <img class="gp-view-btn" src="assets/img/plus.png" alt="plus icon img">
+                                            </div>
+                                        </a>
+                                    </figure>
+                                </div>
+                            </div>
+                            <!-- End single gallery image -->
+
+                            <!-- start single gallery image -->
+                            <div class="gp-single-gallery col-md-4">
+                                <div class="gp-single-gallery-item">
+                                    <figure class="gp-single-gallery-img">
+                                        <a class="gp-imglink" href="assets/img/gallery/6.jpg">
+                                            <img alt="img" src="assets/img/gallery/6.jpg">
+                                            <div class="gp-single-gallery-info">
+                                                <img class="gp-view-btn" src="assets/img/plus.png" alt="plus icon img">
+                                            </div>
+                                        </a>
+                                    </figure>
+                                </div>
+                            </div>
+                            <!-- End single gallery image -->
+
                         </div>
+
                     </div>
                 </div>
             </div>
+        </div>
+        </div>
         </div>
     </section>
 
@@ -597,9 +650,12 @@
                             </div>
                             <div class="col-md-4 column-footer">
                                 <h2 style="font-weight: bold;">Contact</h2>
-                                <p><a href="tel: +40724770007"><span class="fa fa-phone"></span> 0724 77 00 07</a></p>
-                                <p><a href="tel: +40767074848"><span class="fa fa-phone"></span> 0767 07 48 48</a></p>
-                                <p><a href="tel: +40745506699"><span class="fa fa-phone"></span> 0745 50 66 99</a></p>
+                                <p><a href="tel: +40724770007" class="gp-shadow"><span class="fa fa-phone"></span> 0724
+                                        77 00 07</a></p>
+                                <p><a href="tel: +40767074848" class="gp-shadow"><span class="fa fa-phone"></span> 0767
+                                        07 48 48</a></p>
+                                <p><a href="tel: +40745506699" class="gp-shadow"><span class="fa fa-phone"></span> 0745
+                                        50 66 99</a></p>
                                 <p>contact@gardenpizza.ro</p>
                                 <!-- <p><span class="fa fa-envelope-o"></span> contact@gardenpizza.ro</p> -->
                             </div>
