--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                         <span class="icon-bar"></span>
                     </button>
 
-                    <a class="navbar-brand" href="/index.html"><img src="assets/img/gp.svg" alt="Logo img"></a>
+                    <a class="navbar-brand" href="index.html"><img src="assets/img/gp.svg" alt="Logo img"></a>
 
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
