about-us responsiveness

--- a/index.html
+++ b/index.html
@@ -236,11 +236,16 @@
                                         assumenda repellendus dolorem, dolore numquam totam saepe, porro delectus,
                                         libero enim odio quo.
                                     </p>
-                                    <ul>
+                                    <ul style="margin-bottom: 0">
                                         <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A.</li>
                                         <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. B.</li>
                                         <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. C.</li>
                                     </ul>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam minus aliquid,
+                                        itaque illum
+                                        assumenda repellendus dolorem, dolore numquam totam saepe, porro delectus,
+                                        libero enim odio quo.
+                                    </p>
                                 </div>
                             </div>
                         </div>
